# tangram

./: .editorconfig  .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.cjs  AGENTS.md  Cargo.toml  Dockerfile  README.md  biome.json  bun.lockb  bunfig.toml  hello.js  insta.yaml  justfile  output.txt  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tangram.ts
.cargo/: config.toml
a/: tangram.ts
example/: Cargo.toml  README.md  test.js
example/src/: inspector.rs  main.rs  protocol.rs  repl.rs  runner.rs
scripts/: canary.sh  canary.ts  minimal_race_repro.sh  nightly.sh  release.sh
scripts/cloud/: compose.yaml  deinit.nu  down.nu  init.nu  kubernetes.yaml  server.nu  up.nu
scripts/macos/: build.nu  check.nu  doctor.nu  flex-vfs.nu  identifiers.nu  install.nu  release.nu  run.nu
selinux/: README.md  tangram.pp  tangram.te
