[workspace]
default-members = ["packages/cli"]
members = [
  "packages/cli",
  "packages/client",
  "packages/database",
  "packages/either",
  "packages/futures",
  "packages/http",
  "packages/ignore",
  "packages/messenger",
  "packages/server",
  "packages/temp",
  "packages/uri",
  "packages/v8",
  "packages/version",
  "packages/vfs",
]
resolver = "2"

[workspace.package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram is a build system and package manager."
edition = "2021"
homepage = "https://www.tangram.dev"
license = "MIT"
repository = "https://github.com/tangramdotdev/tangram"
rust-version = "1.83"
version = "0.0.0"

[workspace.lints.clippy]
assigning_clones = "allow"
bool_to_int_with_if = "allow"
items_after_statements = "allow"
large_enum_variant = "allow"
manual_async_fn = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
pedantic = { level = "warn", priority = -1 }
same_functions_in_if_condition = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_async = "allow"

[workspace.dependencies]
async-broadcast = "0.7"
async-channel = "2"
async-compression = { version = "0.4", features = ["all"] }
async-nats = "0.38"
async-tar = "0.5"
async_zip = { version = "0.0", features = ["full"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
biome_js_formatter = "0.5"
biome_js_parser = "0.5"
biome_js_syntax = "0.5"
blake3 = "1"
byte-unit = { version = "5", features = ["byte"] }
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "string", "unstable-v5"] }
console-subscriber = "0.4"
copypasta = "0.10"
crossterm = { version = "0.28", features = ["event-stream"] }
dashmap = "6"
data-encoding = "2"
data-encoding-macro = "0.1"
deno_core_icudata = "0.74"
derive_more = { version = "1", features = ["full"] }
erased-serde = "0.4"
fastcdc = { version = "3", features = ["tokio"] }
filetime = "0.2"
fnv = "1"
futures = "0.3"
glob = "0.3"
globset = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
im = "15"
include_dir = "0.7"
indexmap = "2"
indoc = "2"
insta = { version = "1", features = ["json", "redactions", "yaml"] }
itertools = "0.14"
libc = "0.2"
lsp-types = "0.97"
mime = "0.3"
moka = { version = "0.12", features = ["sync"] }
notify = "7"
num = "0.4"
oauth2 = "5.0.0-rc.1"
octocrab = "0.42"
once_cell = "1"
petgraph = "0.7"
pin-project = "1"
pretty_assertions = "1"
proptest = "1"
rand = "0.8"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "stream",
  "rustls-tls",
] }
rusqlite = { version = "0.32", features = ["blob", "bundled"] }
rustls = "0.23"
scopeguard = "1"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = { version = "3", features = ["time_0_3"] }
serde_yaml = { version = "0.9" }
sha2 = "0.10"
sourcemap = "9"
swc_core = { version = "10", features = [
  "common",
  "common_sourcemap",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_transforms",
  "ecma_transforms_module",
  "ecma_transforms_typescript",
  "ecma_visit",
] }
sync_wrapper = "1"
tangram_cli = { path = "packages/cli" }
tangram_client = { path = "packages/client" }
tangram_database = { path = "packages/database" }
tangram_either = { path = "packages/either" }
tangram_futures = { path = "packages/futures" }
tangram_http = { path = "packages/http" }
tangram_ignore = { path = "packages/ignore" }
tangram_messenger = { path = "packages/messenger" }
tangram_server = { path = "packages/server" }
tangram_temp = { path = "packages/temp" }
tangram_uri = { path = "packages/uri" }
tangram_v8 = { path = "packages/v8" }
tangram_version = { path = "packages/version" }
tangram_vfs = { path = "packages/vfs" }
tar = { version = "0.4" }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = [
  "runtime",
  "with-serde_json-1",
] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = { version = "0.8" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tree = "0.4"
unicode-segmentation = "1"
unicode-width = "0.2"
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v7"] }
v8 = { version = "130" }
webbrowser = "1"
webpki-roots = "0.26"
winnow = "0.6"
xattr = { version = "1" }
zerocopy = { version = "0.8", features = ["derive"] }
zip = { version = "2", default-features = false, features = [
  "aes-crypto",
  "deflate",
  "bzip2",
  "time",
] }
zstd = "0.13"

[patch.crates-io]
async-tar = { git = "https://github.com/tangramdotdev/async-tar" }
async_zip = { git = "https://github.com/tangramdotdev/rs-async-zip" }
biome_js_formatter = { git = "https://github.com/biomejs/biome" }
biome_js_parser = { git = "https://github.com/biomejs/biome" }
biome_js_syntax = { git = "https://github.com/biomejs/biome" }

[profile.dev.package.blake3]
opt-level = 3
overflow-checks = false

[profile.dev.package.bzip2]
opt-level = 3
overflow-checks = false

[profile.dev.package.digest]
opt-level = 3
overflow-checks = false

[profile.dev.package.flate2]
opt-level = 3
overflow-checks = false

[profile.dev.package.sha2]
opt-level = 3
overflow-checks = false

[profile.dev.package.tar]
opt-level = 3
overflow-checks = false

[profile.dev.package.xz2]
opt-level = 3
overflow-checks = false

[profile.dev.package.zip]
opt-level = 3
overflow-checks = false

[profile.dev.package.zstd]
opt-level = 3
overflow-checks = false
