[workspace]
default-members = ["packages/cli"]
members = [
  "packages/cli",
  "packages/client",
  "packages/database",
  "packages/either",
  "packages/futures",
  "packages/http",
  "packages/ignore",
  "packages/messenger",
  "packages/sandbox",
  "packages/server",
  "packages/temp",
  "packages/uri",
  "packages/v8",
  "packages/version",
  "packages/vfs",
]
resolver = "2"

[workspace.package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram is a build system and package manager."
edition = "2024"
homepage = "https://www.tangram.dev"
license = "MIT"
repository = "https://github.com/tangramdotdev/tangram"
rust-version = "1.85"
version = "0.0.0"

[workspace.lints.clippy]
assigning_clones = "allow"
bool_to_int_with_if = "allow"
comparison_chain = "allow"
items_after_statements = "allow"
large_enum_variant = "allow"
manual_async_fn = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
pedantic = { level = "warn", priority = -1 }
result_large_err = "allow"
same_functions_in_if_condition = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unused_async = "allow"

[workspace.dependencies]
anstream = "0.6"
astral-tokio-tar = "0.5"
async-broadcast = "0.7"
async-channel = "2"
async-compression = { version = "0.4", features = ["all"] }
async-nats = "0.41"
async_zip = { version = "0.0.17", features = ["full"] }
aws-credential-types = "1"
aws-sigv4 = "1"
biome_js_formatter = { git = "https://github.com/biomejs/biome" }
biome_js_parser = { git = "https://github.com/biomejs/biome" }
biome_js_syntax = { git = "https://github.com/biomejs/biome" }
blake3 = "1"
byte-unit = { version = "5", features = ["byte"] }
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "string", "unstable-v5"] }
console-subscriber = "0.4"
copypasta = "0.10"
crossbeam = "0.8"
crossterm = { version = "0.29", features = ["event-stream"] }
dashmap = "6"
data-encoding = "2"
data-encoding-macro = "0.1"
deno_core_icudata = "0.74"
derive_builder = "0.20"
derive_more = { version = "2", features = ["full"] }
erased-serde = "0.4"
fastcdc = { version = "3", features = ["tokio"] }
filetime = "0.2"
fnv = "1"
foundationdb = { version = "0.9", features = ["fdb-7_3", "embedded-fdb-include"] }
foundationdb-tuple = "0.9"
futures = "0.3"
glob = "0.3"
globset = "0.4"
heed = "0.22"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
im = "15"
include_dir = "0.7"
indexmap = "2"
indoc = "2"
insta = { version = "1", features = ["filters", "json", "redactions", "yaml"] }
itertools = "0.14"
libc = "0.2"
lsp-types = "0.97"
mime = "0.3"
moka = { version = "0.12", features = ["sync"] }
notify = "8"
num = "0.4"
oauth2 = "5.0.0"
octocrab = "0.44"
once_cell = "1"
petgraph = "0.8"
pin-project = "1"
pretty_assertions = "1"
proptest = "1"
radix_trie = "0.2"
rand = "0.9"
ratatui = "0.29"
rayon = "1"
reflink-copy = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "stream",
  "rustls-tls",
] }
rusqlite = { version = "0.36", features = ["blob", "bundled"] }
rustls = "0.23"
scopeguard = "1"
serde = { version = "1", features = ["rc", "derive"] }
serde-untagged = "0.1"
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = { version = "3", features = ["time_0_3"] }
serde_yaml = { version = "0.9" }
sha2 = "0.10"
smallvec = "1"
sourcemap = "9"
swc_core = { version = "26", features = [
  "common",
  "common_sourcemap",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_transforms",
  "ecma_transforms_module",
  "ecma_transforms_typescript",
  "ecma_visit",
] }
sync_wrapper = "1"
tangram_client = { path = "packages/client" }
tangram_database = { path = "packages/database" }
tangram_either = { path = "packages/either" }
tangram_futures = { path = "packages/futures" }
tangram_http = { path = "packages/http" }
tangram_ignore = { path = "packages/ignore" }
tangram_messenger = { path = "packages/messenger" }
tangram_sandbox = { path = "packages/sandbox" }
tangram_server = { path = "packages/server" }
tangram_temp = { path = "packages/temp" }
tangram_uri = { path = "packages/uri" }
tangram_v8 = { path = "packages/v8" }
tangram_version = { path = "packages/version" }
tangram_vfs = { path = "packages/vfs" }
tar = { version = "0.4" }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = [
  "runtime",
  "with-serde_json-1",
] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = { version = "0.8" }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["add-extension", "compression-zstd", "decompression-zstd", "map-request-body", "map-response-body", "set-header", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tree = "0.4"
unicode-segmentation = "1"
unicode-width = "0.2"
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v7"] }
v8 = { version = "130" }
webbrowser = "1"
webpki-roots = "1"
winnow = "0.7"
xattr = { version = "1" }
zerocopy = { version = "0.8", features = ["derive"] }
zstd = "0.13"

[patch.crates-io]
async_zip = { git = "https://github.com/tangramdotdev/rs-async-zip" }

[profile.dev.package.blake3]
opt-level = 3
overflow-checks = false
