[workspace]
default-members = ["packages/cli"]
members = [
  "packages/cli",
  "packages/cli/test",
  "packages/client",
  "packages/compiler",
  "packages/database",
  "packages/either",
  "packages/futures",
  "packages/http",
  "packages/ignore",
  "packages/js",
  "packages/messenger",
  "packages/module",
  "packages/sandbox",
  "packages/serialize",
  "packages/server",
  "packages/session",
  "packages/store",
  "packages/temp",
  "packages/uri",
  "packages/util",
  "packages/v8",
  "packages/version",
  "packages/vfs",
  "packages/zed",
]
resolver = "2"

[workspace.package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram is a build system and package manager."
edition = "2024"
homepage = "https://www.tangram.dev"
license = "MIT"
repository = "https://github.com/tangramdotdev/tangram"
rust-version = "1.90"
version = "0.0.0"

[workspace.lints.clippy]
assigning_clones = "allow"
bool_to_int_with_if = "allow"
comparison_chain = "allow"
items_after_statements = "allow"
large_enum_variant = "allow"
manual_async_fn = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
pedantic = { level = "warn", priority = -1 }
result_large_err = "allow"
same_functions_in_if_condition = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unsafe_derive_deserialize = "allow"
unused_async = "allow"

[workspace.dependencies]
anstream = "0.6"
astral-tokio-tar = "0.5"
async-broadcast = "0.7"
async-channel = "2"
async-compression = { version = "0.4", features = ["all"] }
async-nats = "0.44"
async_zip = { version = "0.0.18", features = ["full"] }
aws-credential-types = "1"
aws-sigv4 = "1"
blake3 = "1"
byte-unit = { version = "5", features = ["byte"] }
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "string", "unstable-v5"] }
console-subscriber = "0.4"
crossterm = { version = "0.29", features = ["event-stream"] }
dashmap = "6"
data-encoding = "2"
data-encoding-macro = "0.1"
deno_core_icudata = "0.74"
derive_more = { git = "https://github.com/jeltef/derive_more", features = ["full"] }
fastcdc = { version = "3", features = ["tokio"] }
filetime = "0.2"
flate2 = "1"
fnv = "1"
foundationdb = { version = "0.9", features = ["fdb-7_3", "embedded-fdb-include"] }
foundationdb-tuple = "0.9"
futures = "0.3"
glob = "0.3"
globset = "0.4"
heed = "0.22"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
im = "15"
include_dir = "0.7"
indexmap = "2"
indoc = "2"
insta = { version = "1", features = ["filters", "json", "redactions", "yaml"] }
itertools = "0.14"
libc = "0.2"
lsp-types = "0.97"
miette = { version = "7.6", features = ["fancy"] }
mime = "0.3"
moka = { version = "0.12", features = ["sync"] }
notify = "8"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
oauth2 = "5.0.0"
octocrab = "0.47"
owo-colors = "4"
oxc = { git = "https://github.com/oxc-project/oxc", features = ["full"] }
oxc_formatter = { git = "https://github.com/oxc-project/oxc" }
petgraph = "0.8"
pin-project = "1"
pretty_assertions = "1"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
ratatui = "0.29"
reflink-copy = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["blob", "bundled", "functions"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
scopeguard = "1"
scylla = "1"
serde = { version = "1", features = ["rc", "derive"] }
serde-untagged = "0.1"
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = { version = "3", features = ["time_0_3"] }
serde_yaml = { version = "0.9" }
sha2 = "0.10"
smallvec = "1"
sourcemap = "9"
syn = "2"
sync_wrapper = "1"
tangram_cli_test = { path = "packages/cli/test" }
tangram_client = { path = "packages/client" }
tangram_compiler = { path = "packages/compiler" }
tangram_database = { path = "packages/database" }
tangram_either = { path = "packages/either" }
tangram_futures = { path = "packages/futures" }
tangram_http = { path = "packages/http" }
tangram_ignore = { path = "packages/ignore" }
tangram_js = { path = "packages/js" }
tangram_messenger = { path = "packages/messenger" }
tangram_module = { path = "packages/module" }
tangram_sandbox = { path = "packages/sandbox" }
tangram_serialize = { path = "packages/serialize" }
tangram_server = { path = "packages/server", default-features = false }
tangram_session = { path = "packages/session", default-features = false }
tangram_store = { path = "packages/store", default-features = false }
tangram_temp = { path = "packages/temp" }
tangram_uri = { path = "packages/uri" }
tangram_util = { path = "packages/util" }
tangram_v8 = { path = "packages/v8" }
tangram_version = { path = "packages/version" }
tangram_vfs = { path = "packages/vfs" }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = { version = "0.9" }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["add-extension", "compression-zstd", "decompression-zstd", "map-request-body", "map-response-body", "set-header", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tree = "0.4"
unicode-segmentation = "1"
unicode-width = "0.2"
urlencoding = "2"
uuid = { version = "1", features = ["v7"] }
v8 = { git = "https://github.com/tangramdotdev/rusty_v8", branch = "rusty-v8-archive-target-var" }
webbrowser = "1"
webpki-roots = "1"
winnow = "0.7"
xattr = { version = "1" }
zed_extension_api = "0.7"
zerocopy = { version = "0.8", features = ["derive"] }
zstd = "0.13"

[profile.dev.package.blake3]
opt-level = 3
overflow-checks = false

[patch.crates-io]
derive_more = { git = "https://github.com/jeltef/derive_more" }
