[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
futures-util = "0.3"
rquickjs = { git = "https://github.com/tangramdotdev/rquickjs", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
v8 = { git = "https://github.com/tangramdotdev/rusty_v8" }
